--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,9 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="gray">#5C5B5B</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="red">#F60606</color>
+    <color name="red">#F33838</color>
+    <color name="mine_color">#A0FA9B</color>
+
 </resources>
